--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-.App {
-  
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fefc01;
+  height: 100vh;
 }
 
 
