--- a/src/components/Chats.css
+++ b/src/components/Chats.css
@@ -38,6 +38,16 @@
     color: white;
 }
 
+.chats__searchIcon {
+    color: white;
+    font-size: 13px!important;
+}
+
+.chats__chatIcon {
+    color: white;
+    font-size: 18px!important;
+}
+
 .chats__search > input::placeholder {
     color: white;
     opacity: 1;
@@ -62,6 +72,22 @@
 .chats__posts {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+}
+
+.chats__takePicIcon {
+    position: absolute;
+    background-color: white;
+    border-radius: 200px;
+    color: grey;
+    font-size: 40px!important;
+    cursor: pointer;
+    /* bottom: 0; */
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.chats__takePicIcon:hover {
+    opacity: 0.8;
 }
 
 
